tests/ui/polymorphization/const_parameters/functions.stderr
warning: the feature `generic_const_exprs` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/functions.rs:3:12
   |
LL | #![feature(generic_const_exprs, rustc_attrs)]
   |            ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #76560 <https://github.com/rust-lang/rust/issues/76560> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: item has unused generic parameters
  --> $DIR/functions.rs:15:8
   |
LL | pub fn unused<const T: usize>() {
   |        ^^^^^^ -------------- generic parameter `T` is unused

error: aborting due to previous error; 1 warning emitted

